# agent

./: .gitignore  .gitkeep  .gitmodules  .prettierignore  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  FREE_MODELS.md  MODELS.md  README.md  TESTING.md  TOOLS.md  bunfig.toml  eslint.config.js  issue-details.json  package-lock.json  package.json  pr-status.json  test-issue-96-integration.js  test-lazy-prop.js  tsconfig.json
.changeset/: add-google-oauth-support.md  add-image-validation.md  add-playwright-mcp-instructions.md  config-and-model-improvements.md  continuous-listening-mode.md  echo-cache-providers.md  fix-empty-string-system-message.md  fix-empty-system-message-oauth.md  fix-esc-key-handling.md  fix-google-oauth-unregistered-scopes.md  fix-google-provider-env-vars.md  fix-help-display.md  fix-log-lazy-info.md  fix-release-formatting.md  fix-stdin-handling.md  fix-system-message-override.md  graceful-provider-fallback.md  interactive-mode-example.md  issue-102-case-study.md  issue-102-google-subscription.md  json-lazy-logging.md  rust-implementation.md  update-free-models-232.md
.github/workflows/: integration-tests.yml  js.yml  model-tests.yml  models.yml  release.yml  rust.yml  test.yml
docs/: MACRO_SUPPORT.md  QWEN_OAUTH_RESEARCH.md  claude-oauth.md  google-oauth.md  groq.md  kilo.md  openrouter.md  stdin-mode.md  timeout-hierarchy.md
examples/: bash-tool.md  github-issue-analysis.md  interactive-mode-multi-turn.md  interactive-mode-output.txt  stdin-mode-examples.sh  webfetch-tool.md
experiments/: test-agent-simple.sh  test-badge-url.mjs  test-changelog-regex.mjs  test-crates-io-verification.mjs  test-cross-platform.js  test-esc-key-handling.md  test-esm-binding.ts  test-exact-invocation.js  test-exec-approach.js  test-failure-detection.mjs  test-fetch-passthrough-215.ts  test-flag-binding.ts  test-full-solution.js  test-gemini-3-pro-alias.js  test-gemini-database-alias.js  test-global-fetch-patch.ts  test-groq-simple.sh  test-groq-tools.sh  test-hash.js  test-help-stdout.sh  test-help-vs-error.sh  test-invalid-model.sh  test-issue-72-fix.mjs  test-log-lazy.js  test-macro.ts  test-model-parsing.mjs  test-prctl.js  test-process-exit-on-parent-kill.sh  test-process-lifetime-timeout.sh  test-process-title.js  test-publish-logic.mjs  test-sdk-fetch-passthrough.ts  test-spawn-agent.js  test-spawned-process.js  test-symlink.sh  test-system-message-override.md  test-valid-model.sh  test-verbose-fetch-chain.ts  test-verbose-http-issue-215-v2.ts  test-verbose-http-issue-215-v3.ts  (+7 more)
experiments/issue-152/: reproduce-error.ts
js/: .npmignore  CHANGELOG.md  README.md  bunfig.toml  create_png.js  create_test_png.js  eslint.config.js  package-lock.json  package.json  stdout.txt
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/changelog.d/: 20251230_120000_separate_cicd_pipelines.md  20260410_201700_add_temperature_option.md  20260411_fix_rust_cicd_releases.md  20260412_000000_rename_crate_and_fix_publishing.md  20260413_cargo_token_fallback.md  20260413_fix_missing_github_release.md  20260413_fix_publish_verification.md  20260413_fix_push_race_condition.md  20260423_issue_266_minimax_default.md  20260425_integration_subdir.md  20260501_stream_json_input.md  README.md
rust/src/: cli.rs  defaults.rs  error.rs  id.rs  lib.rs  main.rs
rust/src/tool/: bash.rs  batch.rs  codesearch.rs  context.rs  edit.rs  glob.rs  grep.rs  invalid.rs  list.rs  mod.rs  multiedit.rs  read.rs  todo.rs  webfetch.rs  websearch.rs  write.rs
rust/src/util/: binary.rs  filesystem.rs  mod.rs
rust/tests/: agent_config.rs  cli.rs  cli_options.rs  compaction_model.rs  error.rs  id.rs  integration_edit_tools.rs  integration_glob_tools.rs  integration_plaintext_input.rs  integration_provider.rs  json_standard_unit.rs  log_lazy.rs  mcp_timeout.rs  model_fallback.rs  model_not_supported.rs  model_strict_validation.rs  model_validation.rs  process_name.rs  provider_verbose_logging.rs  retry_fetch.rs  retry_state.rs  safe_json_serialization.rs  session_usage.rs  sse_usage_extractor.rs  storage_migration.rs  temperature_option.rs  token.rs  tool_bash.rs  tool_batch.rs  tool_codesearch.rs  tool_context.rs  tool_edit.rs  tool_glob.rs  tool_grep.rs  tool_invalid.rs  tool_list.rs  tool_multiedit.rs  tool_read.rs  tool_registry.rs  tool_todo.rs  (+8 more)
rust/tests/integration/: _defaults.rs  bash_tools.rs  basic.rs  batch_tools.rs  codesearch_tools.rs  dry_run.rs  generate_title.rs  google_cloudcode.rs  grep_tools.rs  json_standard_claude.rs  json_standard_opencode.rs  list_tools.rs  mcp.rs  models_cache.rs  output_response_model.rs  read_image_validation_tools.rs  read_tools.rs  resume.rs  server_mode.rs  socket_retry.rs  stdin_input_queue.rs  stream_parse_error.rs  stream_timeout.rs  system_message.rs  system_message_file.rs  task_tools.rs  timeout_retry.rs  todo_tools.rs  verbose_env_fallback.rs  verbose_hi.rs  webfetch_tools.rs  websearch_tools.rs  write_tools.rs
scripts/: build.ts  changeset-version.mjs  check-file-size.mjs  create-github-release.mjs  create-manual-changeset.mjs  format-github-release.mjs  format-release-notes.mjs  generate-rust-integration-tests.mjs  get-model-info.mjs  instant-version-bump.mjs  js-paths.mjs  list-all-models.mjs  publish-to-crates.mjs  publish-to-npm.mjs  rust-collect-changelog.mjs  rust-get-bump-type.mjs  rust-paths.mjs  rust-version-and-commit.mjs  test-model-simple.mjs  test-model-tools.mjs  validate-changeset.mjs  version-and-commit.mjs
src/: bus.ts  index.js  lsp.ts  permission.ts  session.ts
tests/: bash.tools.reference.test.js  bash.tools.test.js  basic.test.js  basic.tools.test.js  dry-run.test.js  edit.tools.reference.test.js  edit.tools.test.js  gemini-oauth.test.js  glob.tools.reference.test.js  glob.tools.test.js  grep.tools.reference.test.js  grep.tools.test.js  list.tools.reference.test.js  list.tools.test.js  log-lazy.test.js  mcp.test.js  mvp.test.js  plaintext.input.test.js  read.tools.reference.test.js  read.tools.test.js  reference.test.js  system-message.test.js  task.tools.test.js  todowrite.tools.test.js  webfetch.tools.test.js  write.tools.test.js
(+722 files in other folders)
