[package]
name = "agent"
version = "0.7.0"
edition = "2021"
description = "A minimal, public domain AI CLI agent compatible with OpenCode's JSON interface"
license = "Unlicense"
authors = ["Link Assistant"]
repository = "https://github.com/link-assistant/agent"
keywords = ["ai", "cli", "agent", "opencode", "assistant"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Path and file handling
walkdir = "2.5"
glob = "0.3"
regex = "1.11"
ignore = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Unique identifiers
ulid = "1.1"
uuid = { version = "1.11", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment variables
dotenvy = "0.15"

# Process execution
which = "7.0"

# Diff utilities
similar = "2.6"

# Async traits
async-trait = "0.1"

# Random number generation
rand = "0.8"

# Base64 encoding
base64 = "0.22"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "agent"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
